--- a/css/ui_style.css
+++ b/css/ui_style.css
@@ -166,6 +166,7 @@ input {
     overflow: hidden;
     display: inline-block;
     background-color: rgb(241, 241, 241);
+    
 }
 .info_imgbox{
     width: 59.3%;
@@ -174,17 +175,19 @@ input {
     background-color:rgb(241, 241, 241);
 }
 .info_name{
-    margin: 50px 0px 10px 50px;
+    margin: 50px 0px 20px 20px;
     font-family: GmarketSansMedium;
     font-size: 32px;
     font-weight: 800;
     color: #284C7E;
 }
 .info_etc{
-    margin: 5px 0px 5px 50px;
+    width: inherit;
+    margin: 5px 0px 0px 10px;
     font-family: GmarketSansMedium;
     font-size: 24px;
     font-weight: lighter;
+    display: block;
 }
 
 
