--- a/css/ui_style.css
+++ b/css/ui_style.css
@@ -9,7 +9,8 @@ body {
     background-color: aliceblue;
 }
 .container{
-    width: 100vw;
+    width: auto;
+    min-width: 1000px;
     height: auto;
     margin: auto;
     position: relative;
